Feature fne 680 mahendra sprint9 (#295)
* FNF 680 changes

FNF 680 changes

* FNF 680 changes

FNF 680 changes

* FNF 680 changes

FNF 680 changes

* FNF 680 changes

FNF 680 changes

* FNF 680 changes

FNF 680 changes

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -25,7 +25,7 @@
             <div class="grid-row__col grid-row__col--12">
               <div class="text-error text-center"
                 *ngIf="(frmType.invalid && (frmType.dirty || frmType.touched)) || (typeFailed)">
-                You must select a type for filing.
+                Select a reason type.
               </div>
             </div>
           </div>
@@ -217,7 +217,6 @@
                 <button
                   class="btn btn-primary btn-right"
                   type="submit"
-                  [disabled]="frmType.controls.reasonTypeRadio.status === 'INVALID'"
                 >
                   Next
                 </button>
