--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -50,13 +50,13 @@
                 You must enter a reason.
               </div>
               <div class="text-error text-center" *ngIf="reasonTextEmpty() && !frmReason.controls.reasonText.errors?.required">
-                You must enter text.
+                Enter text for the reason selected.
               </div>
             </div>
           </div>
           <div class="grid-row info-row">
-            <div class="grid-row__col grid-row__col--6 text-left">
-              <b>Enter Your Text*</b>
+            <div class="grid-row__col grid-row__col--9 text-left">
+              <b>Text*</b>
               <ng-template #tipContent1>
                   Please note that if you copy and paste text into the text box the formatting may be lost.
                   The text box is only for composing a message or letter. The text box does feature basic formatting.
@@ -76,7 +76,7 @@
                   <span class="sr-only">Click here for more information</span>
                 </button>
             </div>
-            <div  class="grid-row__col grid-row__col--6 text-right">
+            <div  class="grid-row__col grid-row__col--12 text-right">
               *=Required
             </div>
           </div>
@@ -182,18 +182,19 @@
               </div>
               <div class="file-attached-container" *ngIf="file !== null">
                 <div class="grid-row">
-                  <div class="grid-row__col--2">
-                    {{ file.name }}
-                  </div>
-                  <div class="grid-row__col--2 text-left">
+                  <div class="grid-row__col grid-row__col--12">
+                    {{ file.name }} 
+
                     <button
-                      type="button"
-                      class="btn btn-link"
-                      (click)="open(deletePDF)"
-                    >
-                        <span vertical-align="top" class="close-icon"></span>
-                    </button>
+                    type="button"
+                    class="btn btn-link"
+                    (click)="open(deletePDF)"
+                  >
+                      <span vertical-align="top" class="close-icon"></span>
+                  </button>
+
                   </div>
+                 
                   <ng-template #deletePDF let-d="dismiss">
                     <div class="modal-header">
                       <h2 class="modal-title">
@@ -247,6 +248,11 @@
             </div>
           </div>
         </div>
+        <div  class="grid-row">
+          <div class="grid-row__col grid-row__col--12">
+          <h4>* = Required</h4>
+          </div>
+      </div>     
       </footer>
     </form>
   </div> <!-- ./reason-container -->
