--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
@@ -143,7 +143,7 @@
                     <input class="form-check-input" type="checkbox" id="{{ state?.code }}" 
                       [(ngModel)]="state.selected">
                     <label class="form-check-label" for="{{ state?.code }}">
-                      {{ state?.name }}</label>
+                      {{ state?.code }} - {{ state?.name}}</label>
                   </div>
                 </li>
               </ul>
