cache filters fixes

--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="form-sidebar">
   <header>
-    <h3 class="text-center">Filters</h3>
+    <h3 class="text-center">{{ title }}</h3>
   </header>
   <section>
       <div class="mx-auto" style="width:97%">
