--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -144,7 +144,7 @@
                     ></ng-container> &nbsp;&nbsp;
                     <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
                         <div class="text-error" *ngIf="frmSignee.controls.additional_email_1.errors?.email">
-                          &nbsp;&nbsp;Additional email 1 must <br />&nbsp;be valid email address.
+                          &nbsp;Additional email 1 must <br />&nbsp;be valid email address.
                         </div>
                     </div>
               </div>
@@ -165,7 +165,7 @@
                     </ng-container>    
                       <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
                           <div class="text-error" *ngIf="frmSignee.controls.confirm_email_1.errors?.email">
-                              &nbsp;Confirm email 1 must<br /> be valid email address.
+                              &nbsp;confirm email 1 must<br /> be valid email address.
                           </div>
                       </div>
               </div>
@@ -173,10 +173,11 @@
               <div class="grid-row__col grid-row__col--3">
                   <br /> &nbsp;&nbsp;
                      <div class="text-error" *ngIf="additionalEmail1Invalid && showAdditionalEmail1Warn">
-                        &nbsp;&nbsp;&nbsp;Confirm additional Email 1.
+                        <br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confirm additional email 1.
                     </div>
                     <div class="text-success" *ngIf="!additionalEmail1Invalid && showAdditionalEmail1Warn">
-                      &nbsp;&nbsp;&nbsp;{{this.confirm_email_1}}<br /> &nbsp;&nbsp;&nbsp;has been successfully added.
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{this.confirm_email_1}}<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;has been successfully added.
                     </div>
                </div>   
            </div>
@@ -202,14 +203,14 @@
                       </ng-container> 
                       <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
                           <div class="text-error" *ngIf="frmSignee.controls.additional_email_2.errors?.email">
-                            &nbsp;&nbsp;Additional email 2 must <br />&nbsp;&nbsp;be valid email address.
+                            &nbsp;Additional email 2 must <br />&nbsp;&nbsp;be valid email address.
                           </div>
                       </div>
                </div> 
 
                <div class="grid-row__col grid-row__col--2">
                   <br />
-                  <label for="confirm_email_2"> Confirm Email  2 </label> 
+                  <label for="confirm_email_2"> Confirm Email 2 </label> 
                   &nbsp;&nbsp;
                   <ng-container><input
                        type="email"
@@ -231,10 +232,11 @@
                       <br />
                       <br />
                       <div class="text-error" *ngIf="additionalEmail2Invalid && showAdditionalEmail2Warn">
-                          &nbsp;&nbsp;&nbsp;Confirm additional Email 2.
+                        <br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confirm additional email 2.
                       </div>
                       <div class="text-success" *ngIf="!additionalEmail2Invalid && showAdditionalEmail2Warn">
-                          &nbsp;&nbsp;&nbsp;{{this.confirm_email_2}}<br /> &nbsp;&nbsp;&nbsp;has been successfully added.
+                          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{this.confirm_email_2}}<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;has been successfully added.
                       </div>
                </div>
            </div>
