Creating local services for forms

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -55,6 +55,7 @@
           [reportType]="reportType"
           [reportsLoading]="reportsLoading"
           [coverageDateNotSelected]="coverageDateNotSelected"
+          [committeeReportTypes]="reportTypes"
         >
       </f3x-report-type>
       </div>
