FNE-473 Icons center-aligned

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -24,6 +24,7 @@
             <i
               class="down-arrow-icon"
               aria-hidden="true"
+              style="margin-left: 2px"
             ></i>
           </div>
         </div>
