--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
@@ -25,7 +25,7 @@
           <!-- [hidden]="isHideTypeFilter"  -->
           <div class="card-body" 
               [@openCloseScroll]="!isHideTypeFilter ? 'open' : 'closed'">
-            <div class="transactions__filter-type-list-body">
+            <div #filterType class="transactions__filter-type-list-body">
                 <ul *ngFor="let categoryGroup of transactionCategories" class="transactions__filter-type-list">
                   <li class="transactions__filter-type-group">{{ categoryGroup.text }}</li>
                   <li *ngFor="let categoryType of categoryGroup.options">
@@ -48,6 +48,9 @@
             </i>
           </div>
           <div class="card-body" [@openClose]="!isHideDateFilter ? 'open' : 'closed'">
+            <div *ngIf="dateFilterValidation.isError" class="text-error text-center">
+              {{ dateFilterValidation.message }}
+            </div>
             <label for="filter-date-from">From</label>
             <div class="input-group transactions__filter-multi-input">
               <div class="input-group-prepend">
@@ -92,6 +95,9 @@
             </i>
           </div>
           <div class="card-body" [@openClose]="!isHideAmountFilter ? 'open' : 'closed'">
+            <div *ngIf="amountFilterValidation.isError" class="text-error text-center">
+              {{ amountFilterValidation.message }}
+            </div>            
             <label for="filter-amount-min">Minimum</label>
             <div class="input-group transactions__filter-multi-input">
               <div class="input-group-prepend">
@@ -167,7 +173,7 @@
                 </div>
           </div>
         </div> 
-      </div>  
+      </div> 
   </section>
   <footer>
     <div class="form-sidebar__btns">
