Getting main transaction types to show on the screen

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="form-sidebar">
   <header>
-    <h3 class="text-center">{{ title }}</h3>
+    <h3 class="text-center">Transaction Categories</h3>
   </header>
   <section>
     <ul class="form-sidebar__links" >
