--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -10,7 +10,7 @@
         >
       </report-type-sidebar>
     </div>
-    <div *ngIf="step==='step_2' || step==='step_3'">
+    <div *ngIf="step==='step_2'">
       <transaction-sidebar
         title="Transaction Categories"
         [transactionCategories]="parentTransactionCategories"
@@ -30,11 +30,11 @@
       <app-steps
         [steps]="[
           {text: 'Report<br/>type', step: 'step_1'},
-          {text: 'Transaction<br/>type', step: 'step_2' || 'step_3'},
-          {text: 'Form', step: 'step_4'},
-          {text: 'Preview', step: 'step_5'},
-          {text: 'Sign', step: 'step_6'},
-          {text: 'Submit', step: 'step_7'}
+          {text: 'Transaction<br/>type', step: 'step_2'},
+          {text: 'Form', step: 'step_3'},
+          {text: 'Preview', step: 'step_4'},
+          {text: 'Sign', step: 'step_5'},
+          {text: 'Submit', step: 'step_6'}
         ]"
         [current_step]="currentStep"
       >
@@ -64,8 +64,11 @@
 
       <div
         class="form__step"
-        [hidden]="step!=='step_3'"
-      ></div>
+        [hidden]="step!=='step_2'"
+      >
+        <f3x-transaction-type (status)='onNotify($event)'>
+        </f3x-transaction-type>
+      </div>
 
       <div
         class="form__step"
@@ -75,7 +78,8 @@
           [formOptionsVisible]="formOptionsVisible"
           [selectedOptions]="selectedOptions"
           (status)='onNotify($event)'
-        ></f3x-individual-receipt>
+        >
+        </f3x-individual-receipt>
       </div>
 
       <div
