--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.scss
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.scss
@@ -1,19 +1,32 @@
 @import '../../../shared/scss/global';
 
 .forms__wizard {
-    display: table;
-    table-layout: fixed;
+    display: block;
     min-height: $mainContentHeight;
     margin: 0;
     padding: 0;
     width: 100%;
+    @include media(tablet) {
+      display: block;
+    }
+    @include media(mediumDesktop) {
+      display: table;
+      table-layout: fixed;
+    }
+    @include media(largeDesktop) {
+      display: table;
+      table-layout: fixed;
+    }
  .form__sidebar {
     background-color: $bombay;
+    display: block;
     flex-grow: 1;
-    display: none;
+    display: block;
     padding-left: 0;
+    width: 100%;
     @include media(tablet) {
-      display: none;
+      display: block;
+      width: 100%;
     }
     @include media(mediumDesktop) {
       display: table-cell;
@@ -25,18 +38,19 @@
     }
   }
   .form__container {
-    display: table-cell;
-    min-height: 100vh;
+    display: block;
     width: 99%;
     @include media(tablet) {
-      min-height: 100vh;
+      display: block;
     }
     @include media(mediumDesktop) {
+      display: table-cell;
       margin-left: 5px;
       min-height: 100vh;
       width: 70%;
     }
     @include media(largeDesktop) {
+      display: table-cell;
       margin-left: 5px;
       min-height: 100vh;
       width: 76%;
