Working on mobile view CSS

--- a/front-end/src/app/shared/partials/steps/steps.component.html
+++ b/front-end/src/app/shared/partials/steps/steps.component.html
@@ -3,6 +3,9 @@
     *ngFor="let step of steps"
     [ngClass]="(step.step === current_step)? 'current ' + step.step : step.step"
   >
-    <div [innerHTML]="step.text"></div>
+    <div
+      class="step-text"
+      [innerHTML]="step.text"
+    ></div>
   </li>
 </ul>
