Working on mobile view CSS.

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -29,8 +29,8 @@
     <div class="form__steps" *ngIf="step!=='financial_summary'">
       <app-steps
         [steps]="[
-          {text: 'Report<br/>type', step: 'step_1'},
-          {text: 'Transaction<br/>type', step: 'step_2'},
+          {text: 'Report', step: 'step_1'},
+          {text: 'Type', step: 'step_2'},
           {text: 'Form', step: 'step_3'},
           {text: 'Preview', step: 'step_4'},
           {text: 'Sign', step: 'step_5'},
