--- a/front-end/src/app/shared/partials/steps/steps.component.scss
+++ b/front-end/src/app/shared/partials/steps/steps.component.scss
@@ -60,14 +60,15 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        visibility: visible;
         @include media(tablet) {
-
+          // Nothing here on purpose.
         }
         @include media(mediumDesktop) {
-
+          // Nothing here on purpose.
         }
         @include media(largeDesktop) {
-
+          // Nothing here on purpose.
         }
       }
     }
@@ -76,7 +77,7 @@
     padding: 10px 0 0;
     width: 15%;
     .step-text {
-      display: none;
+      visibility: hidden;
       @include media(tablet) {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -84,6 +85,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        visibility: visible;
       }
       @include media(mediumDesktop) {
         display: -webkit-box;
@@ -92,6 +94,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        visibility: visible;
       }
       @include media(largeDesktop) {
         display: -webkit-box;
@@ -100,6 +103,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        visibility: visible;
       }
     }
   }
