--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -1,14 +1,12 @@
 <div class="transactions__main-container">
   <div class="transactions__sidebar">
     <div class="transactions__sidebar_categories">
-      <!-- <transaction-categories-sidebar [@fadeInOut] *ngIf="!isShowFilters"  -->
       <transaction-categories-sidebar [hidden]="isShowFilters"
         title="Transaction Categories"
         (status)='onNotify($event)'>
       </transaction-categories-sidebar>
     </div>
     <div class="transactions__sidebar_filters">
-      <!-- <app-transactions-filter-sidebar [@fadeInOut] *ngIf="isShowFilters"  -->
       <app-transactions-filter-sidebar [hidden]="!isShowFilters" 
         title="Filters"
         [formType]="formType">
@@ -55,15 +53,35 @@
               <i class="filter-icon"></i>
               Filter
             </button>
-            <div class="input-group pl-0 transactions__trx-search">
-              <input class="form-control py-1" type="text" placeholder="Search by Transaction" aria-label="Search">
-              <div class="input-group-append">
-                <span class="input-group-text" id="">
-                  <i class="search-icon text-grey" aria-hidden="true"></i>
-                </span>
-              </div>
-            </div>
           </div>
+          <div class="input-group pl-0 transactions__trx-search">
+            <input class="form-control py-1" type="text" placeholder="Search All" 
+              [(ngModel)]="searchText" aria-label="Search">
+            <div class="input-group-append" (click)="search()">
+              <span class="input-group-text" id="">
+                <i class="search-icon text-grey" aria-hidden="true"></i>
+              </span>
+            </div>
+          </div>          
+        </div>
+      </div>
+      <div class="grid-row">
+        <div class="grid-row__col grid-row__col--12">
+          <div class="">
+            <button *ngFor="let searchTextItem of searchTextArray; let i = index" 
+              class="btn btn-primary btn-left transactions__trx-btn"
+              (click)="removeSearchText(i)">{{ searchTextItem }}
+            </button>
+          </div>          
+          <!-- <div class="input-group pl-0 transactions__trx-search">
+            <input class="form-control py-1" type="text" placeholder="Search by Transaction" 
+              [(ngModel)]="searchText" aria-label="Search">
+            <div class="input-group-append" (click)="search()">
+              <span class="input-group-text" id="">
+                <i class="search-icon text-grey" aria-hidden="true"></i>
+              </span>
+            </div>
+          </div>       -->
         </div>
       </div>
       <app-transactions-table 
@@ -80,6 +98,10 @@
               <i class="table-icon"></i>
               Transactions
             </button>
+            <button class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showFilters()">
+              <i class="filter-icon"></i>
+              Filter
+            </button>            
           </div>
         </div>
       </div>
