--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -30,7 +30,7 @@
                 </th>
                 <th 
                     [class]="getSortClass('cvg_start_date')" 
-                    (click)="changeSortDirection('cvg_start_date')">Coverage Date cycle
+                    (click)="changeSortDirection('cvg_start_date')">Coverage Date Cycle
                 </th>                              
                 <th 
                     [class]="getSortClass('report_type_desc')" 
@@ -71,9 +71,9 @@
                 </td>-->
                 <td *ngIf="isColumnVisible('form_type')">{{report.form_type}}</td>
                 <td *ngIf="isColumnVisible('status')">{{report.status}}</td>
-                <td *ngIf="isColumnVisible('fec_id')">{{report.fec_id}}</td>
-                <td *ngIf="isColumnVisible('amend_ind')">{{report.amend_ind}}</td>
-                <td *ngIf="isColumnVisible('cvg_start_date')">{{report.cvg_start_date | date: 'MM/dd/yyyy'}}-{{report.cvg_end_date | date: 'MM/dd/yyyy'}}</td>
+                <td *ngIf="isColumnVisible('fec_id')">{{report.status === 'Submitted' ? report.fec_id : '' }}</td>
+                <td *ngIf="isColumnVisible('amend_ind')">{{report.form_type !== 'F99' ? report.amend_ind : '' }}</td>
+                <td *ngIf="isColumnVisible('cvg_start_date')">{{report.form_type !== 'F99'? (report.cvg_start_date | date: 'MM/dd/yyyy'- report.cvg_end_date | date: 'MM/dd/yyyy') : '' }}</td>
                 <td *ngIf="isColumnVisible('report_type_desc')">{{report.report_type_desc}}</td>
                 <td *ngIf="isColumnVisible('filed_date')">{{report.filed_date | date: 'MM/dd/yyyy'}}</td>
                 <td>
